--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DUMB MERCH</title>
+    <script
+      type="text/javascript"
+      src="https://app.sandbox.midtrans.com/snap/snap.js"
+      data-client-key="SB-Mid-client-d96EqVhR-ZcW2Nva"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
