--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DUMB MERCH</title>
+    <title>Dumb Merch</title>
     <script
       type="text/javascript"
       src="https://app.sandbox.midtrans.com/snap/snap.js"
